# EncyclopediaGalactica

./: .bumpversion.cfg  .editorconfig  .gitignore  CHANGELOG.md  EncyclopediaGalactica.sln  EncyclopediaGalactica.sln.DotSettings  README.md  SourceFormats.Worker.sln  azure-pipelines.yaml  azure-pipelines.yml  pom.xml
Rust/backend/: .env  Cargo.toml  ec.dev.db  rustfmt.toml
Rust/backend/database/sqlite/database/: ec.sql
Rust/backend/database/sqlite/tables/: document_type.sql
Rust/backend/src/: lib.rs  main.rs
Rust/backend/src/backend/: mod.rs
Rust/backend/src/backend/document_type/: add.rs  add_types.rs  delete.rs  delete_types.rs  get.rs  get_by_id.rs  mod.rs  modify.rs  modify_types.rs
Rust/backend/src/routes/: mod.rs
Rust/backend/src/routes/document_type/: add.rs  delete.rs  get.rs  get_by_id.rs  mod.rs  modify.rs
Rust/backend/test/document_type/: add_document_type.sh
Rust/eg/: .env  Cargo.toml  eg.config.toml  exercises.config.toml
Rust/eg/src/: main.rs
Rust/eg/src/cli/: mod.rs
Rust/eg/src/cli/commands/: mod.rs
Rust/eg/src/cli/matchers/: generate.rs  mod.rs
Rust/eg/src/logic/: mod.rs
Rust/eg/src/logic/arg_collectors/: generate_from_a_book.rs  mod.rs
Rust/eg/src/logic/builders/: mod.rs  studies_tree.rs
Rust/eg/src/logic/collectors/: collector.rs
Rust/eg/src/logic/controllers/: generate_from_a_book.rs  mod.rs
Rust/eg/src/logic/exercises/: mod.rs
Rust/eg/src/logic/orm/: mod.rs  section_entity.rs
Rust/eg/src/logic/parsers/: books.rs  config.rs  sections.rs  topics.rs
Rust/eg/src/logic/providers/: filename.rs
Rust/eg/src/logic/renderers/: pdf.rs
Rust/eg/src/logic/starmap/: mod.rs
Rust/eg/src/logic/structs/: book.rs  chapter.rs  config.rs  mod.rs  question_tmpl.rs  section.rs  topic.rs
Rust/eg/src/logic/sync/: books_refresh.rs  chapters_refresh.rs  mod.rs  sections_refresh.rs  topic_refresh.rs
Rust/eg_python_api/: Cargo.toml  pyproject.toml
Rust/eg_python_api/src/: lib.rs
Rust/encyclopedia_galactica/: Cargo.toml
Rust/encyclopedia_galactica/migrations/: 100_star_systems.down.sql  100_star_systems.up.sql  200_planets.up.sql  20260109185712_planets.up.sql
Rust/encyclopedia_galactica/src/: main.rs
Rust/encyclopedia_galactica/src/cli/: mod.rs
Rust/encyclopedia_galactica/src/cli/matchers/: mod.rs
Rust/encyclopedia_galactica/src/logic/: mod.rs
Rust/encyclopedia_galactica/src/logic/eg_storage/: mod.rs
Rust/encyclopedia_galactica/src/logic/exercises/: mod.rs
Rust/encyclopedia_galactica/src/logic/starmap/: mod.rs
python/: pyproject.toml  requirements.txt
python/.ropeproject/: autoimport.db
python/src/cli/: cli.py
python/src/cli/calculate/: calculate.py
python/src/cli/storage/: edges.py  storage.py
python/src/cli/storage/edge_types/: __init__.py  add.py  delete.py  list.py  update.py
python/src/cli/storage/vertex/: __init__.py  add.py  delete.py  list.py  update.py  vertex.py
python/src/scenarios/storage/: storage.py
python/src/scenarios/storage/edge_types/: add.py  get_edge_types.py
python/src/scenarios/storage/edges/: list.py
python/src/scenarios/storage/vertices/: add_vertex.py  list_vertices.py
python/src/storage/: db.py
python/src/storage/api/: vertex.py
python/src/storage/edge_types/: add.py  entity.py  get_edge_types.py
python/src/storage/edges/: entity.py  list.py
python/src/storage/vertices/: add.py  entity.py  list_vertices.py
src/Rust/: Cargo.toml  eg.config.toml
src/Rust/apps/cli/: Cargo.toml
src/Rust/apps/cli/src/: main.rs
src/Rust/apps/py/: Cargo.toml
src/Rust/apps/py/src/: lib.rs
src/Rust/cli/: Cargo.toml
src/Rust/cli/src/commands/: mod.rs
src/Rust/crates/eg-cli/: Cargo.toml
src/Rust/crates/eg-cli/src/: main.rs
src/Rust/crates/eg-config/: Cargo.toml
src/Rust/crates/eg-config/src/: lib.rs
src/Rust/crates/eg-qt/: .qmlls.ini  Cargo.toml  build.rs
src/Rust/crates/eg-qt/src/: main.rs
src/Rust/crates/galnav-api/: Cargo.toml
src/Rust/crates/galnav-api/src/: lib.rs
src/Rust/crates/galnav-astro/: Cargo.toml
src/Rust/crates/galnav-cli/: Cargo.toml
src/Rust/crates/galnav-objects/: Cargo.toml
src/Rust/crates/galnav-storage/: Cargo.toml
src/Rust/crates/galsim-api/: Cargo.toml
src/Rust/crates/galsim-api/media/: .$adding_new_star_system_using_a_single_reference.drawio.bkp
src/Rust/crates/galsim-api/src/: lib.rs
src/Rust/crates/galsim-api/tests/: mod.rs
src/Rust/crates/galsim-astro/: Cargo.toml
src/Rust/crates/galsim-astro/src/: lib.rs
src/Rust/crates/galsim-cli/: Cargo.toml
src/Rust/crates/galsim-cli/src/: lib.rs
src/Rust/crates/galsim-migrations/: 001_galaxy_map.down.sql
src/Rust/crates/galsim-objects/: Cargo.toml
src/Rust/crates/galsim-storage/: Cargo.toml
src/Rust/crates/galsim-storage/migrations/: 100_galaxies.down.sql  400_moons.down.sql
src/Rust/domains/galnav/algorithms/: Cargo.toml
src/Rust/domains/galnav/api/: Cargo.toml
src/Rust/domains/galnav/domain_objects/: Cargo.toml
src/Rust/domains/galnav/repository/: Cargo.toml
src/Rust/domains/galnav/scenarios/: Cargo.toml
src/Rust/eg_py/: Cargo.toml
src/Rust/eg_py/src/: lib.rs
src/Rust/exercises/: Cargo.toml
src/Rust/exercises/src/catalog_scanner/: mod.rs
src/Rust/exercises/src/parsers/: books.rs
src/Rust/galaxymap/: Cargo.toml
src/Rust/galaxymap/src/: lib.rs
src/Rust/galaxymap/src/scenarios/: mod.rs
src/Rust/migrations/: 001_galaxy_map.up.sql  100_galaxies.up.sql  100_galaxy.down.sql  100_galaxy.up.sql  100_star_systems.up.sql  200_planets.down.sql  200_planets.up.sql  200_star_systems.up.sql  300_moons.up.sql  300_planets.up.sql  400_moons.up.sql  400_stars.up.sql  500_stars.up.sql  9999001_galaxy.default.sql  9999002_star_systems.sql  9999003_planets.sql  seed_000_galaxy_map.sql  seed_001_galaxy.default.sql  seed_002_star_systems.sql  seed_003_planets.sql
src/Rust/starmap/: Cargo.toml
src/Rust/starmap/src/: lib.rs
src/Rust/starmap/tests/: mod.rs
src/Rust/storage/: Cargo.toml
src/Rust/storage/src/repository/: mod.rs
src/python/: pyproject.toml
src/python/galaxymap/: pyproject.toml
src/python/src/cli/: cli.py
(+4344 files in other folders)
