[package]
name = "ec"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "ec"

[dependencies]
tokio = "1.43.0"
dotenvy = "0.15.7"
serde_json = "1.0.138"
env_logger = "0.11.6"
log = "0.4.26"

[dependencies.serde]
version = "1.0.217"
features = ["derive"]

[dependencies.actix-web]
version = "4.9.0"

[dependencies.sqlx]
version = "0.8.3"
default-features = false
features = ["runtime-tokio", "sqlite", "tls-native-tls", "macros"]
