[package]
name = "eg"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "macros",
] }
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
log = "0.4.28"
env_logger = "0.11.8"
config = "0.15.16"
clap = { version = "4.5.47", features = ["derive", "cargo"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.6"
walkdir = "2.5.0"
tabled = "0.20.0"
rand = "0.9.2"
chrono = "0.4.42"
anyhow = { version = "1.0.99", features = ["backtrace"] }
derive_more = { version = "2.0.1", features = ["display", "from", "add"] }
