[package]
name = "eg"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "macros",
] }
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
log = "0.4.28"
env_logger = "0.11.8"
config = "0.15.17"
clap = { version = "4.5.48", features = ["derive", "cargo"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.7"
walkdir = "2.5.0"
glob = "0.3.3"
tabled = "0.20.0"
rand = "0.9.2"
chrono = "0.4.42"
regex = "1.11.3"
anyhow = { version = "1.0.100", features = ["backtrace"] }
thiserror = "2.0.17"
derive_more = { version = "2.0.1", features = ["display", "from", "add"] }
