[package]
name = "eg_python_api"
version = "0.1.0"
edition = "2024"

[lib]
name = "eg_python_api"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.2", features = ["extension-module"] }
once_cell = "1.21.3"
tokio = { version = "1.48.0", features = ["rt", "macros"] }
encyclopedia_galactica = { version = "0.1.0", path = "../encyclopedia_galactica" }

[build-dependencies]
pyo3-build-config = "0.27.2"
