[package]
authors = ["Andras Csanyi"]
name = "encyclopedia_galactica"
version = "0.1.0"
edition = "2024"
description = """
A system that will evolve to the Encyclopedia Galactica eventually.
"""

[lib]
name = "encyclopedia_galactica"
path = "src/lib.rs"

[dependencies]
pyo3 = { version = "0.27.2", features = ["anyhow"] }
tokio = { version = "1.48.0", features = ["full"] }
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "macros",
  "migrate",
] }
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
log = "0.4.29"
env_logger = "0.11.8"
config = "0.15.19"
clap = { version = "4.5.53", features = ["derive", "cargo"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
toml = "0.9.10"
walkdir = "2.5.0"
glob = "0.3.3"
tabled = "0.20.0"
rand = "0.9.2"
chrono = "0.4.42"
regex = "1.12.2"
anyhow = { version = "1.0.100", features = ["backtrace"] }
thiserror = "2.0.17"
derive_more = { version = "2.1.1", features = ["display", "from", "add"] }
