[workspace]
resolver = "3"
members = [
  "crates/eg-cli/",
  "crates/eg-qt/",
  "crates/eg-config/",

  "crates/galsim-api/",
  "crates/galsim-astro/",
  "crates/galsim-cli/",
  "crates/galsim-objects/",
  "crates/galsim-storage/",
]

[workspace.dependencies]
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "macros",
  "migrate",
  "json",
] }
tokio = { version = "1.49.0", features = ["full"] }
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
log = "0.4.29"
env_logger = "0.11.9"
config = "0.15.19"
clap = { version = "4.5.59", features = ["derive", "cargo"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.0.3"
walkdir = "2.5.0"
glob = "0.3.3"
tabled = "0.20.0"
rand = "0.10.0"
chrono = "0.4.43"
regex = "1.12.3"
anyhow = { version = "1.0.101", features = ["backtrace"] }
thiserror = "2.0.18"
derive_more = { version = "2.1.1", features = ["display", "from", "add"] }
once_cell = "1.21.3"

cxx = "1.0.194"
cxx-qt = "0.8.1"
cxx-qt-lib = { version = "0.8", features = ["full"] }
