[package]
name = "galsim_astro"
version = "0.1.0"
edition = "2024"
description = """
The astrodynamics library for Encyclopedia Galactica Galaxy Navigator
"""

[dependencies]
tokio = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
config = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
derive_more = { workspace = true }
