[package]
name = "galsim_cli"
version = "0.1.0"
edition = "2024"
description = """
The CLI portion of the Galaxy Navigator. This library must be included and wired in the eg-cli crate.
"""

[dependencies]
tokio = { workspace = true }
dotenvy = { workspace = true }
dotenvy_macro = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
config = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
walkdir = { workspace = true }
glob = { workspace = true }
tabled = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
derive_more = { workspace = true }
