[package]
name = "galsim_objects"
version = "0.1.0"
edition = "2024"
description = """
The common objects between differenc layers in the Galaxy Navigator module.
"""

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true }
