[package]
name = "gal-nav-domain-objects"
version = "0.1.0"
edition = "2024"
description = """
The GalaxyMap module of the Encyclopedia Galactica
"""

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true }
